AI-JADEDEVS4/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zendesk__Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Initially_Assigned_At__c</fullName>
        <label>Initially Assigned At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resolution_Time__c</fullName>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Solved_At__c</fullName>
        <label>Solved At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Ticket_ID__c</fullName>
        <label>Zendesk Ticket ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Cases_OM</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.TYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filters>
        <label>Cases_OM</label>
        <queue>Cases_OM</queue>
        <sharedTo>
            <group>Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_OM_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Cases_OM</label>
        <queue>Cases_OM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Implementation_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Implementation</label>
        <queue>Implementation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Reference_Requests_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Reference Requests</label>
        <queue>Reference_Requests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SFDCHelp_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>SFDCHelp</label>
        <queue>SFDCHelp</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SalesTeam_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Sales Team</label>
        <queue>SalesTeam</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>